# ecommerce_api

./: pyproject.toml  requirements.dev.txt  requirements.txt  ruff.toml  ssl_check.py
cart/: serializers.py  views.py
cart/migrations/: 0004_auto_20230506_0324.py
checkout/: views.py
core/: decorators.py  make_pdf.py  middleware.py  models.py  views.py
ecommerce/: routing.py  urls.py
ecommerce/settings/: base.py  staging.py
notifications/: models.py  twilio.py  views.py
notifications/migrations/: 0004_alter_notification_id.py
order/: views.py  viewsets.py
order/migrations/: 0004_auto_20230506_0324.py
products/: documents.py  models.py  serializers.py  signals.py  views.py  viewsets.py
products/jobs/minutely/: sample.py
products/migrations/: 0012_auto_20230506_0324.py
user_profile/: models.py  schedule_jobs.py  serializers.py  urls.py  views.py
user_profile/migrations/: 0012_auto_20230506_0324.py
video_chat/: server.py
