[tool.poetry]
name = "ecommerce-api"
version = "0.1.0"
description = ""
authors = ["Gideon Ahiadzi <gideon.ahiadzi@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
celery = "5.2.7"
channels = "4.0.0"
channels-redis = "4.1.0"
daphne = "4.0.0"
django = "3.2.19"
django-allauth = "0.54.0"
django-countries = "7.5.1"
django-crontab = "0.7.1"
django-debug-toolbar = "4.0.0"
django-elasticsearch-dsl = "7.3"
django-elasticsearch-dsl-drf = "0.22.5"
django-extensions = "3.2.1"
django-extra-fields = "3.0.2"
django-filter = "23.2"
django-haystack = "3.1.1"
django-jet-reboot = "1.3.3"
django-mptt = "0.14.0"
django-phonenumber-field = "7.1.0"
django-phonenumbers = "1.0.1"
django-randompinfield = "0.4.7"
django-redis = "5.2.0"
django-rest-auth = "0.9.5"
django-twilio = "0.13.2"
djangorestframework = "3.12.4"
djangorestframework-jwt = "1.11.0"
drf-haystack = "1.8.11"
fcm-django = "1.0.13"
googletrans = "3.0.0"
pillow = "9.5.0"
psycopg2-binary = "2.9.6"
python-decouple = "3.8"
python-memcached = "1.59"
serpy = "0.3.1"
twilio = "6.63.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
